add fiat property

--- a/templates/tpos/tpos.html
+++ b/templates/tpos/tpos.html
@@ -503,6 +503,7 @@
               amount: this.sat,
               memo: this.amountFormatted,
               tipAmount: this.tipAmountSat,
+              fiat: true,
               currency: this.currency,
               fiatAmount: this.amount,
               rate: this.exchangeRate
